<resources>
    <string name="app_name">YouHub</string>
    <string name="splash_main_text">Your Counselor is now one click away!</string>
    <string name="splash_support_text">Most counselors are totally free!</string>
    <string name="app_version">App Version: 1.0 beta</string>
    <string name="razor_studios">RAZOR STUDIOS</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="use_email_and_password">Use Email and Password</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="my_sessions">My Sessions</string>
    <string name="welcome_back">WELCOME BACK,</string>
    <string name="username">DANIEL</string>
    <string name="tagline_text">Do you just need someone to talk to? Check out our Community Counselors!</string>
    <string name="counselor_name">Daniel Kebora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>