<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/splash_main_text"
            android:textColor="@color/white"
            android:textSize="40sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="10dp">

        <Button
            android:id="@+id/button_continue_with_google"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/continue_with_google"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_email_and_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/button_continue_with_google"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/use_email_and_password"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp">

        <TextView
            android:id="@+id/textview_razor_studios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/razor_studios" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/content_loading_progress_bar_splash"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
